# sca-toolsuite

./: .travis.yml  BENCHMARKS.md  CMakeLists.txt  DOCUMENTATION.md  EXAMPLES.md  FAQ.md  FAQ.txt  INSTALL.md  KNOWLEDGE.md  NEWS.md  README.md
.github/workflows/: build.yml
data/search/: README.txt  game_of_life.txt
src/: CMakeLists.txt  sca-toolsuite.pro  test.sh
src/algo/: L  S  burning_test.cpp  fix.cpp  id.cpp  is_recurrent  l  random_throw.cpp  relax.cpp  s  super.cpp  throw
src/ca/: CMakeLists.txt  active_cells.cpp  ca.cpp  ca_file  converter.cpp  dead_cells.cpp  dump.cpp  preimage.cpp  scene.cpp  transf_by_grids.cpp
src/core/: all_equals.cpp  create.cpp  diff2
src/gui_qt/: CMakeLists.txt  CaSelector.cpp  CaSelector.h  DrawArea.cpp  DrawArea.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  MsgTimer.cpp  MsgTimer.h  StateMachine.cpp  StateMachine.h  labeled_widget.h  main.cpp
src/img/: CMakeLists.txt  transform.cpp
src/io/: avalanches_bin2human.cpp  convert.cpp  field_to_seq.cpp  fmt_tf.cpp  replace.cpp  scat.cpp  seq_to_field.cpp  tik.cpp  to_image  to_ods  to_pdf  to_tga.cpp
src/math/: add.cpp  add2  calc.cpp  comb.cpp  coords  equation.cpp  filter.cpp  sub2
src/res/: asm_basic.h  bitgrid.h  ca.cpp  ca.h  ca_basics.h  ca_convert.h  ca_eqs.h  ca_table.cpp  ca_table.h  disjoint_sets.h  eqs_functions.cpp  eqs_functions.h  eqs_internal.h  equation_solver.cpp  equation_solver.h  general.cpp  general.h  geometry.cpp  geometry.h  graph_io.cpp  graph_io.h  grid.h  image.cpp  image.h  io.cpp  io.h  odometer.h  patch.h  print.h  random.h  scc_algo.h  (+6 more)
(+38 files in other folders)
